opam-version: "2.0"
version: "dev"
synopsis: "Your companion toolkit to write parser combinators"
authors: ["Thomas Letan <lthms@soap.coffee>"]
maintainer: ["Thomas Letan <lthms@soap.coffee>"]
homepage: "https://github.com/lthms/coq-comparse"
bug-reports: "https://github.com/lthms/coq-comparse/issues"
license: "GPL-3.0"

depends: [
  "ocaml"
  "coq"
  "dune" {>= "2.5"}
  "coq-ext-lib" {>= "0.11.2"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
